# monorepo

./: .gitignore  .gitmodules  HOWTO.md  README.md  relations.json  update_submodules.sh
_archive/moon/: .gitignore  README.md  prompts.md  pyproject.toml
_archive/moon/example/full/: code.py
_archive/moon/example/gibbous/: markdown.md
_archive/moon/example/new/: markdown.md
_archive/moon/example/quarter/: code.py  markdown.md
_archive/moon/init/: global.json
_archive/moon/init/phase1/: phase1.md
_archive/moon/init/phase2/: phase2.md
_archive/moon/init/phase3/: main.go
_archive/moon/init/phase3/chats/: installing-pkgs.md  make-new-command.md
_archive/moon/src/: config.go  go.mod  go.sum  llm-cli  main.go  moon.config.json  stream.go  test.md  tokens.txt
_archive/moon/src/moon-test/: "Defining Structs and Reading JSON Data in Go with Error Handling"..md  history.json  moon.config.json
_archive/moon/src/moons/: Function to Send Prompt to OpenAI GPT-3 API and Extract Delta Content via Server-Sent Events (SSE).md  Parsing JSON Data to Custom Structs.md  README.md  file name: How to gracefully close an SSE connection with response.close() or body.close() in Python.md
_archive/spotify-recently-played-markdown-list/: .env.example  README.md  index.js  package-lock.json  package.json
scripts/move_project/: README.md  filepicker.go  go.mod  go.sum  move_project  move_project.go
scripts/new_project/: init_submodule.py  readme_summary.md
scripts/readme_summarizer/: .env.example  pyproject.toml  readme_summary.md  summarize_readmes.py
