[tool.poetry]
name = "readme-summarizer"
version = "0.1.0"
description = ""
authors = ["Bram Adams <3282661+bramses@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "readme_summarizer"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
